force-app/main/default/objects/Empresa__c/Empresa__c.object-meta.xml
<CustomObject>
    <label>Empresa</label>
    <nameField>
        <label>Nombre de Empresa</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Empresas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>