force-app/main/default/objects/Empresa__c/fields/Codigo_ERP__c.field-meta.xml
<CustomField>
    <fullName>Codigo_ERP__c</fullName>
    <label>Código ERP</label>
    <length>80</length>
    <type>Text</type>
</CustomField>