force-app/main/default/objects/Empresa__c/fields/Nombre_Legal__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Legal__c</fullName>
    <label>Nombre Legal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>