force-app/main/default/objects/Empresa__c/fields/Tipo_Kit_Softland__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Kit_Softland__c</fullName>
    <description>Tipo de kit ('V' Vehículo / 'M' Mercancía-Moto) que HttpCalloutCreateKit envía a Softland para esta Empresa. Configuración mínima para reemplazar la decisión binaria previa por Record Type.</description>
    <inlineHelpText>Valor 'V' o 'M' usado por la integración de creación de kits Softland (HttpCalloutCreateKit).</inlineHelpText>
    <label>Tipo Kit Softland</label>
    <length>1</length>
    <type>Text</type>
</CustomField>